--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ repository/*
 ._*
 .project
 sysconfig.local.inc.php
+sysconfig.inc.php
+slims7.sublime-project
+slims7.sublime-workspace
+template/default/*
